--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'org.glassfish.main:javax.annotation:4.0-b33'
     compile 'com.afollestad.material-dialogs:core:0.9.0.0'
     compile 'com.afollestad.material-dialogs:commons:0.9.0.0'
@@ -43,8 +44,11 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
+
     compile 'com.jakewharton.timber:timber:4.3.0'
 
     compile "com.jakewharton:butterknife:8.3.0"
     apt "com.jakewharton:butterknife-compiler:8.3.0"
+
+    compile 'ru.arturvasilov:sqlite:0.1.6'
 }
